crates/vize_patina/src/rules/script/no_ref_as_operand/snapshots/vize_patina__rules__script__no_ref_as_operand__tests__invalid_if_condition.snap
---
source: crates/vize_patina/src/rules/script/no_ref_as_operand/tests.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-ref-as-operand",
        severity: Error,
        message: "'flag' is a ref and must be unwrapped with `.value` here.",
        start: 95,
        end: 99,
        help: Some(
            "A ref holds its value behind `.value`. Read it as `<name>.value` in this position; passing the ref itself (e.g. to `watch`) does not need `.value`.",
        ),
        labels: [
            Label {
                message: "ref used directly as an operand",
                start: 95,
                end: 99,
            },
        ],
        fix: None,
    },
]
