crates/vize_patina/src/rules/script/no_ref_as_operand/snapshots/vize_patina__rules__script__no_ref_as_operand__tests__invalid_update_expression.snap
---
source: crates/vize_patina/src/rules/script/no_ref_as_operand/tests.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-ref-as-operand",
        severity: Error,
        message: "'count' is a ref and must be unwrapped with `.value` here.",
        start: 86,
        end: 91,
        help: Some(
            "A ref holds its value behind `.value`. Read it as `<name>.value` in this position; passing the ref itself (e.g. to `watch`) does not need `.value`.",
        ),
        labels: [
            Label {
                message: "ref used directly as an operand",
                start: 86,
                end: 91,
            },
        ],
        fix: None,
    },
]
